[package]
authors = ["Pillar <ymblender@gmail.com>"]
description = "Easy use js and dom in wasm(Don't use, its under development)."
documentation = "https://docs.rs/js_dom"
edition = "2021"
homepage = "https://docs.rs/js_dom"
keyowrds = ["wasm", "js", "dom"]
license = "MIT"
name = "js_dom"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
